* 5.8 -- [2018-03-07 Mi] 

  - Timeout in prompt for additional focus-command
  - Popup to show current node during after focus change
  - Various changes to become ready for melpa
  - Renamed org-index-dispatch to org-index, org-index to org-index-1 and
    org-index-dispatch-key to org-index-key
  
* 5.7 -- [2017-10-21 Sa]

  - Option to move to bottom of node after focus
  - Command to revert last change to list of focused nodes

* 5.6 -- [2017-09-28 Th]

  - Quick repeat with delete-option for goto-focus
  - Moved Changelog to its own file
  - New command 'news'
  - Bugfixes

* 5.5 -- [2017-09-03 So]

  - Standard case-folding in occur
  - Better handling of nested focus nodes
  - Bugfixes

* 5.4 -- [2017-06-06 Tu]

  - Dedicated submenu for focus operations
  - Occur accepts a numeric argument as a day span
  - New customization `org-index-clock-into-focus'
  - Fixed delay after choosing an index line
  - (Re)introduced lexical binding
  - Bugfixes

* 5.3 -- [2017-03-26 Su]

  - Focused can now be on a list of nodes (instead of a single one)
  - Cleaned up undeclared dependencies

* 5.2 -- [2017-02-18 Sa]

  - New command 'focus'
  - Speeded up org-index--parse-table with the stored property "max-ref"
  - Speeded up org-index--on with search
  - Added org-index-prepare-when-idle
  - Fixed compatibility issue with emacs 24 (font-lock-ensure)
  - Added more customizations
  - Bugfixes

* 5.1 -- [2016-10-19 We]

  - Offering help during query for subcommands
  - Removed org-index-default-keybindings
  - Renamed subcommand multi-occur to find-ref
  - Subcommands add needs no longer be invoked from heading
  - Many Bugfixes

* 5.0 -- [2015-12-29 Tu]

  - New commands yank, column and edit
  - New column tags
  - All columns are now required
  - References are now optional
  - Subcommand enter has been renamed to index
  - Subcommands kill and edit can be invoked from an occur buffer
  - Many Bugfixes
  - Added link to screencast

* 4.3 -- [2015-08-20 Th]
